New header image, minor style & wording tweaks

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -1,6 +1,6 @@
 <header id="header">
   <div>
     <h1>Michael Baird</h1>
-    <h3>Ruby / Rails / DevOps</h3>
+    <h3>Developer &amp; UX Engineer</h3>
   </div>
 </header>
