--- a/_includes/_post_header.html
+++ b/_includes/_post_header.html
@@ -1,6 +1,6 @@
 <header id="post-header">
   <div>
-    <h1><a href="/">Michael Baird</a></h1>
-    <h3>Ruby / Rails / DevOps</h3>
+    <h1>Michael Baird</h1>
+    <h3>Developer &amp; UX Engineer</h3>
   </div>
 </header>
