--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,9 +3,9 @@ body {
 }
 
 #header {
-  background: url(/static/img/header.jpg) no-repeat left top;
+  background: url(/static/img/header_iceland.jpg) no-repeat left bottom;
   background-size: cover;
-  color: #444;
+  color: #333;
 }
 
 #post-header {
