--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -22,7 +22,7 @@ section, footer {
 
 @media screen and (min-width: 950px) {
   header {
-    padding: 7em;
+    padding: 8em 7em;
   }
 
   article, #post-header div {
