Updated header image

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,9 +3,9 @@ body {
 }
 
 #header {
-  background: url(/static/img/header_iceland.jpg) no-repeat left bottom;
+  background: url(/static/img/header_iceland_alt.jpg) no-repeat left bottom;
   background-size: cover;
-  color: #333;
+  color: #f9f9f9;
 }
 
 #post-header {
